# kcfg-vex

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: vex_todo.md
kcfgvex/: __init__.py  __main__.py  cli.py
kcfgvex/cve/: __init__.py  fetch.py  vex.py
kcfgvex/kernel/: __init__.py  dotconfig.py  kbuild_trace.py
src/: cli.rs  cve.rs  error.rs  kernel.rs  lib.rs  main.rs
src/cli/: cve_fetch.rs  trace.rs  yocto_scan.rs
src/cve/: fetch.rs  vex.rs
src/kernel/: config.rs  tracer.rs
tests/: config_tests.rs  test_dotconfig.py  test_tracer.py  test_yocto_scan.py  tracer_tests.rs  vex_tests.rs
