[package]
name = "kcfg-vex"
version = "0.1.0"
edition = "2021"
authors = ["kcfg-vex contributors"]
description = "Kernel Config & VEX Utilities "
license = "MIT OR Apache-2.0"
repository = "https://github.com/brel-ge/kcfg-vex"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1"
regex = "1.0"
rayon = "1.7"
indicatif = "0.18"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
debug = true

[profile.dev.package.regex]
opt-level = 3
