[project]
name = "kcfg-vex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["rich>=14.1.0", "typer>=0.16.0"]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
kcfgvex = "kcfgvex.cli:main"

[tool.uv]
package = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["kcfgvex"]

[tool.hatch.build.targets.editable]
packages = ["kcfgvex"]
